# llm-polars

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb
data/: list.json  schemas.json
lib/: error_logs.py
logs/: df.json  errors.json
scripts/: create_code_batchs.py  create_pairs.py  create_question_batchs.py  create_schema_code_pairs.py  download_code.py  download_datasets.py  download_questions.py  enhance_csv.py  fetch_kaggle.py  generate_jsonl_code.py  generate_jsonl_questions.py  get_schemas.py  list.md  list_datasets.py  test_code.py
