[project]
name = "llm-polars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.0.1",
    "kaggle>=1.7.4.5",
    "openai>=2.5.0",
    "polars>=1.34.0",
    "pydantic>=2.12.3",
]
